# cmake_skeleton

./: CMakeLists.txt  README.md
include/: test.h
src/: CMakeLists.txt  client.cpp  server.cpp
